tests/snapshots/examples_fixtures/aoc__2025__aoc_day5_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day5_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day5_haskell_style.flx:54:40
   |
54 |     parse_ranges(lines, idx + 1, stop, push(acc, parse_range_line(line)))
   |                                        ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day5_haskell_style.flx:67:34
   |
67 |     parse_values(lines, idx + 1, push(acc, parse_int(line)))
   |                                  ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day5_haskell_style.flx:105:9
    |
105 |         push(acc, r)
    |         ^^^^

Hint:
  Define it first: let push = ...;

Found 3 errors.
== stdout ==
<not executed>
